# clickup-time-in-status-analyzer

./: Cargo.toml  bacon.toml  docker-compose.yaml  readme.md
src/: app.rs  domain.rs  lib.rs  main.rs  models.rs
src/components/: mod.rs  workspace_select.rs
src/constants/: session.rs
src/routes/: login.rs  mod.rs  oauth_redirect.rs  task.rs  ticket.rs  workspaces.rs
src/routes/pages/: home.rs
src/routes/session/: workspace.rs
src/services/: clickup.rs  mod.rs
src/services/clickup/: models.rs  service.rs
templates/: home.html
templates/components/: workspace_select.html
templates/pages/: base.html
